--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "env": "export $(cat .env | xargs)",
+    "build": "tsc",
+    "clean": "tsc --build --clean",
+    "start": "node dist/server.js",
+    "dev": "tsc && node -r dotenv/config build/server.js",
+    "lint": "eslint --fix src/**/*.ts",
+    "test": "NODE_ENV=test mocha --recursive -r ts-node/register -r dotenv/config test/**/*.spec.ts --exit"
   },
   "repository": {
     "type": "git",
@@ -22,5 +28,25 @@
   "bugs": {
     "url": "https://github.com/eugenio-cunha/trt-3/issues"
   },
-  "homepage": "https://github.com/eugenio-cunha/trt-3#readme"
+  "homepage": "https://github.com/eugenio-cunha/trt-3#readme",
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.4",
+    "@types/uuid": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.2",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "uuid": "^8.0.0"
+  }
 }
