--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "tsc",
     "clean": "tsc --build --clean",
     "start": "node dist/server.js",
-    "dev": "tsc && node -r dotenv/config build/server.js",
+    "dev": "tsc && node dist/server.js",
     "lint": "eslint --fix src/**/*.ts",
-    "test": "NODE_ENV=test mocha --recursive -r ts-node/register -r dotenv/config test/**/*.spec.ts --exit"
+    "test": "NODE_ENV=test mocha --recursive -r ts-node/register test/**/*.spec.ts --exit"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
+    "@types/node-fetch": "^2.5.7",
     "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -47,6 +48,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "uuid": "^8.0.0"
   }
 }
