--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
+    "@types/mongodb": "^3.5.14",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
     "@types/uuid": "^7.0.3",
@@ -48,6 +49,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.5.7",
     "node-fetch": "^2.6.0",
     "uuid": "^8.0.0"
   }
