--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/mongodb": "^3.5.14",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
+    "@types/puppeteer": "^2.0.1",
     "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -51,6 +52,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "node-fetch": "^2.6.0",
+    "puppeteer": "^3.0.2",
     "uuid": "^8.0.0"
   }
 }
