fila no redis implementada

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trt-3",
+  "name": "api-trt",
   "version": "1.0.0",
-  "description": "data miner",
+  "description": "API TRT",
   "main": "dist/server.js",
   "directories": {
     "test": "test"
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eugenio-cunha/trt-3.git"
+    "url": "git+https://github.com/eugenio-cunha/api-trt.git"
   },
   "keywords": [
     "data",
@@ -26,9 +26,9 @@
   "author": "Eugenio Cunha <eugenio.cunha@ymail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eugenio-cunha/trt-3/issues"
+    "url": "https://github.com/eugenio-cunha/api-trt/issues"
   },
-  "homepage": "https://github.com/eugenio-cunha/trt-3#readme",
+  "homepage": "https://github.com/eugenio-cunha/api-trt#readme",
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
@@ -37,18 +37,20 @@
     "@types/mongodb": "^3.5.14",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
+    "@types/redis": "^2.8.18",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^7.1.2",
-    "ts-node": "^8.9.1",
     "node-fetch": "^2.6.0",
+    "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.5.7"
+    "mongodb": "^3.5.7",
+    "redis": "^3.0.2"
   }
 }
