--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/mongodb": "^3.5.14",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
-    "@types/redis": "^2.8.18",
+    "@types/socket.io": "^2.1.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
@@ -51,6 +51,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
-    "redis": "^3.0.2"
+    "socket.io": "^2.3.0"
   }
 }
